syntax = "proto3";

package yourdailyword;

option java_multiple_files = true;
option java_package = "com.minkyu.yourdailyword.common.protos";
option java_outer_classname = "CalendarTypeProto";

enum CalendarType {
    NOT_SPECIFIED = 0;
    GREGORIAN_BASED = 1;
    LUNAR_BASED = 2;
    HEBREW_BASED = 3;
}
